--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "build": "rm -rf dist && tsc -p ./tsconfig.build.json",
     "test": "node --loader ts-node/esm ./test/test.ts"
   },
+  "types": "./index.d.ts",
+  "main": "./dist/index.js",
+  "files": [
+    "package*.json",
+    "dist/*",
+    "index.d.ts"
+  ],
   "keywords": [],
   "author": "DCsunset",
   "license": "GPL-3.0",
@@ -14,7 +21,8 @@
     "estree-util-is-identifier-name": "^2.0.0",
     "estree-util-value-to-estree": "^1.3.0",
     "mdast-util-to-string": "^3.1.0",
-    "unist-util-visit": "^4.1.0"
+    "unist-util-visit": "^4.1.0",
+    "unified": "^10.1.1"
   },
   "devDependencies": {
     "@mdx-js/mdx": "^2.0.0-rc.2",
@@ -22,7 +30,6 @@
     "mdast": "^3.0.0",
     "mdast-util-mdx": "^1.1.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
-    "unified": "^10.1.1"
+    "typescript": "^4.5.2"
   }
 }
