--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "rm -rf dist && tsc -p ./tsconfig.build.json",
-    "test": "node --loader ts-node/esm ./test/test.ts"
+    "test": "tsx ./test/test.ts"
   },
   "types": "./index.d.ts",
   "main": "./dist/index.js",
@@ -29,15 +29,15 @@
     "estree-util-is-identifier-name": "^2.0.0",
     "estree-util-value-to-estree": "^1.3.0",
     "mdast-util-to-string": "^3.1.0",
-    "unist-util-visit": "^4.1.0",
-    "unified": "^10.1.1"
+    "tsx": "^3.7.1",
+    "unified": "^10.1.1",
+    "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
     "@mdx-js/mdx": "^2.0.0-rc.2",
     "@types/node": "^16.11.10",
     "mdast": "^3.0.0",
     "mdast-util-mdx": "^1.1.0",
-    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
 }
