--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
   "author": "DCsunset",
   "license": "GPL-3.0",
   "dependencies": {
-    "estree-util-is-identifier-name": "^2.0.0",
+    "estree-util-is-identifier-name": "^2.0.1",
     "estree-util-value-to-estree": "^1.3.0",
     "mdast-util-to-string": "^3.1.0",
     "tsx": "^3.7.1",
-    "unified": "^10.1.1",
+    "unified": "^10.1.2",
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
-    "@mdx-js/mdx": "^2.0.0-rc.2",
-    "@types/node": "^16.11.10",
+    "@mdx-js/mdx": "^2.1.2",
+    "@types/node": "^18.0.3",
     "mdast": "^3.0.0",
-    "mdast-util-mdx": "^1.1.0",
-    "typescript": "^4.5.2"
+    "mdast-util-mdx": "^2.0.0",
+    "typescript": "^4.7.4"
   }
 }
