--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A remark plugin to generate toc and convert it into MDX export",
   "type": "module",
   "scripts": {
-    "build": "rm -rf dist && tsc -p ./tsconfig.build.json",
+    "build": "rm -rf dist && tsc",
     "test": "tsx ./test/test.ts"
   },
   "types": "./index.d.ts",
