--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "build": "rm -rf dist && tsc",
     "test": "tsx ./test/test.ts"
   },
-  "types": "./index.d.ts",
+  "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "files": [
     "package*.json",
-    "dist/*",
-    "index.d.ts"
+    "dist/*"
   ],
   "keywords": [
     "remark",
@@ -29,7 +28,6 @@
     "estree-util-is-identifier-name": "^2.0.1",
     "estree-util-value-to-estree": "^1.3.0",
     "mdast-util-to-string": "^3.1.0",
-    "tsx": "^3.7.1",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.0"
   },
@@ -38,6 +36,7 @@
     "@types/node": "^18.0.3",
     "mdast": "^3.0.0",
     "mdast-util-mdx": "^2.0.0",
+    "tsx": "^3.7.1",
     "typescript": "^4.7.4"
   }
 }
