--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^18.0.3",
     "mdast": "^3.0.0",
     "mdast-util-mdx": "^2.0.0",
+    "remark-custom-heading-id": "^1.0.0",
     "tsx": "^3.7.1",
     "typescript": "^4.7.4"
   }
